Changes to Clinical Admission

--- a/Clinical Admission.html
+++ b/Clinical Admission.html
@@ -283,7 +283,7 @@
             DIFFERENTIAL DIAGNOSIS
         </label>
         <select class="form-control" id="differential_count"
-                name="differential_count" required="required"
+                name="differential_count"
                 data-concept="f1bec2f8-ce26-4fb8-a4fb-68bf7a34381d^Corona Virus Diagnosis^99DCT">
             <option value="">...</option>
             <option value="cf64f9d4-d38a-11e8-b6e2-0c5b8f279a64^DAYS^99DCT">Coronavirus infection, unspecified - B342</option>
