--- a/Lab exam request.html
+++ b/Lab exam request.html
@@ -100,6 +100,10 @@
         <h2>Covid19 Test</h2>
         <fieldset>
             <div class="form-group">
+                <label>DATE OF LABORATORY TEST:(dd-mm-yyyy)</label>
+                <input class="form-control" id="obs.DATEOFLABORATORYTEST" name="obs.DATEOFLABORATORYTEST" type="text"  data-concept="3267^DATE OF LABORATORY TEST^99DCT"></input>
+            </div>
+            <div class="form-group">
                 <label for="obs.Covidcontroltest">Covid19 test(Number 1-X:</label>
                 <input id="obs.Covidcontroltest" class="form-control" name="obs.Covidcontroltest" type="number" data-concept="107305^Covid control test^99DCT"/>
             </div>
