--- a/Lab exams results.html
+++ b/Lab exams results.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="form-group">
-                <label for="Covid19testResults">Covid19 test Results:</label>
+                <label for="obs.Covid19testResults">Covid19 test Results:</label>
                 <select class="form-control" id="obs.Covid19testResults" name="obs.Covid19testResults" data-concept="107308^Covid Ig M^99DCT" placeholder="">
                     <option value="">...</option>
                     <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -115,7 +115,7 @@
 
 
             <div class="form-group">
-                <label for="CovidIgM">Covid Ig M:</label>
+                <label for="obs.CovidIgM">Covid Ig M:</label>
                 <select class="form-control" id="obs.CovidIgM" name="obs.CovidIgM" data-concept="107306^Covid Ig M^99DCT" placeholder="">
                     <option value="">...</option>
                     <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -123,7 +123,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="Covid19IgG">Covid19 Ig G:</label>
+                <label for="obs.Covid19IgG">Covid19 Ig G:</label>
                 <select class="form-control" id="obs.Covid19IgG" name="obs.Covid19IgG" data-concept="107307^Covid19 Ig G^99DCT" placeholder="">
                     <option value="">...</option>
                     <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -132,37 +132,25 @@
             </div>
         </fieldset>
         <fieldset>
-           <!--<div class="form-group">
-                <label for="obs.DATEOFLABORATORYTEST">DATE OF LABORATORY TEST:</label>
-                <input id="obs.DATEOFLABORATORYTEST" class="form-control" name="obs.DATEOFLABORATORYTEST" type="date" value="3267^DATE OF LABORATORY TEST^99DCT"/>
-            </div>-->
-            <div class="form-group">
-                <label>DATE OF LABORATORY TEST:(dd-mm-yyyy)</label>
-                <textarea class="form-control" id="obs.DATEOFLABORATORYTEST" name="obs.DATEOFLABORATORYTEST" type="text"  data-concept="3267^DATE OF LABORATORY TEST^99DCT"></textarea>
-            </div>
-          <!-- <div class="form-group">
-               <label for="obs.Dateofreceivingresults">Date of receiving results:</label>
-               <input id="obs.Dateofreceivingresults" class="form-control" name="obs.Dateofreceivingresults" type="date" value="107327^Date of receiving results^99DCT"/>
-           </div>-->
-            <div class="form-group">
-                <label>Date of receiving results:(dd-mm-yyyy)</label>
-                <textarea class="form-control" id="obs.Dateofreceivingresults" name="obs.Dateofreceivingresults" type="text"  data-concept="107327^Date of receiving results^99DCT"></textarea>
-            </div>
-          <!--  <div class="form-group">
-                <label for="obs.Datesupposedfortotakesample">Date supposed for to take sample:</label>
-                <input id="obs.Datesupposedfortotakesample" class="form-control" name="obs.Datesupposedfortotakesample" type="date" value="107311^Date supposed for to take sample^99DCT"/>
-                &lt;!&ndash;<input class="form-control date_picker Date today-date" id="obs.Datesupposedfortotakesample" name="obs.Datesupposedfortotakesample" type="date">&ndash;&gt;
-            </div>-->
 
             <div class="form-group">
+                <label>DATE OF LABORATORY TEST:(dd-mm-yyyy)</label>
+                <input class="form-control" id="obs.DATEOFLABORATORYTEST" name="obs.DATEOFLABORATORYTEST" type="text"  data-concept="3267^DATE OF LABORATORY TEST^99DCT"></input>
+            </div>
+
+            <div class="form-group">
+                <label>Date of receiving results:(dd-mm-yyyy)</label>
+                <input class="form-control" id="obs.Dateofreceivingresults" name="obs.Dateofreceivingresults" type="text"  data-concept="107327^Date of receiving results^99DCT"></input>
+            </div>
+            <div class="form-group">
                 <label>Date supposed for to take sample:(dd-mm-yyyy)</label>
-                <textarea class="form-control" id="obs.Datesupposedfortotakesample" name="obs.Datesupposedfortotakesample" type="text"  data-concept="107311^Date supposed for to take sample^99DCT"></textarea>
+                <input class="form-control" id="obs.Datesupposedfortotakesample" name="obs.Datesupposedfortotakesample" type="text"  data-concept="107311^Date supposed for to take sample^99DCT"></input>
             </div>
         </fieldset>
 
 
         <div class="form-group">
-            <label for="TESTSORDERED">TESTS ORDERED:</label>
+            <label for="obs.TESTSORDERED">TESTS ORDERED:</label>
             <select class="form-control" id="obs.TESTSORDERED" name="obs.TESTSORDERED" data-concept="3cd937e4-26fe-102b-80cb-0017a47871b2^TESTS ORDERED^99DCT">
                 <option value="">...</option>
                 <option value="10402^SGPT -ALAT ^99DCT">SGPT -ALAT </option>
@@ -184,7 +172,7 @@
         </div>
 
         <div class="form-group">
-            <label for="Laboratoryresults">Results:</label>
+            <label for="obs.Laboratoryresults">Results:</label>
             <select class="form-control" id="obs.Laboratoryresults" name="obs.Laboratoryresults" data-concept="39ed201e-c0e8-48dd-8944-551a14428a4b^Laboratory results^99DCT" placeholder="Start typing something...">
                 <option value="">...</option>
                 <option value="703^POSITIVE^99DCT">POSITIVE  </option>
