--- a/Vital signs.html
+++ b/Vital signs.html
@@ -99,7 +99,7 @@
         <h3>VITAL SIGNS</h3>
         <fieldset>
             <div class="form-group">
-                <label for="obs.Tepmerature">Tepmerature (oC):</label>
+                <label for="obs.Tepmerature">Temperature (oC):</label>
                 <input id="obs.Tepmerature" class="form-control" name="obs.Tepmerature" type="number" data-concept="5088^Tepmerature (oC)^99DCT"/>
             </div>
             <div class="form-group">
@@ -137,13 +137,7 @@
         </fieldset>
     </div>
     <hr/>
-
-    <div>
-        <input id="save_draft" name="save_draft" type="submit" value="Draft"/>
-        <input id="submit_form" name="submit_form" type="submit" value="submit"/>
-    </div>
 </form>
-
 </body>
 <script type="text/javascript">
         $(document).ready(function () {
