--- a/Discharge.html
+++ b/Discharge.html
@@ -11,14 +11,13 @@
     <script src="js/additional-methods.min.js"></script>
     <script src="js/jquery-autocomplete-min.js"></script>
     <script src="js/muzima.js"></script>
-
-    <title>VITAL SIGNS</title>
 </head>
 <body class="col-md-10 col-md-offset-1">
 <div id="pre_populate_data"></div>
 <form id="VitalSigns_form" name="VitalSigns_form">
     <div class="section">
         <fieldset>
+            <h2>PATIENT DISCHARGE</h2>
             <h3>Encounter Details</h3>
             <div class="form-group">
                 <label for="encounter.location_id">Location Name:<span class="required">*</span></label>
@@ -100,16 +99,38 @@
         <fieldset>
             <div class="form-group">
                 <label for="dischargeDate">Discharge Date:</label>
-                <!--<input class="form-control" id="obs.DischargeDate" name="obs.dischargeDate" data-concept="3800^Discharge Date:^99DCT" type="datetime-local">-->
                 <input class="form-control date_picker Date today-date" id="DischargeDate" name="DischargeDate" type="date">
             </div>
-
-            <!--
-           <div class="form-group">
-                <label>Discharge Date:</label>
-                <textarea class="form-control" id="obs.DischargeDate" name="obs.DischargeDate" type="date"  rows="2" data-concept="3800^DischargeDate^99DCT"></textarea>
+            <div class="form-group">
+                <fieldset>
+                    <h4>DISCHARGE REASON</h4>
+                    <label>
+                        <input id="obs.QUARANTINE COMPLETED" name="obs.QUARANTINE COMPLETED" type="checkbox"
+                               data-concept="74f8b497-32d4-48c1-b037-0fdcb7fd91d4^QUARANTINE COMPLETED^99DCT" value="74f8b497-32d4-48c1-b037-0fdcb7fd91d4^QUARANTINE COMPLETED^99DCT">
+                        QUARANTINE COMPLETED
+                    </label>
+                    <label>
+                        <input id="obs.PATIENTCURED" name="obs.REASONFOREXITINGCARE" type="checkbox"
+                               data-concept="1811^REASON FOR EXITING CARE^99DCT" value="1746^PATIENT CURED^99DCT">
+                        CLIENT CURED
+                    </label>
+                    <label>
+                        <input id="obs.PATIENTTRANSFERREDOUT" name="obs.REASONFOREXITINGCARE" type="checkbox"
+                               data-concept="1811^REASON FOR EXITING CARE^99DCT" value="1744^PATIENT TRANSFERRED OUT^99DCT">
+                        CLIENT TRANSFERRED OUT
+                    </label>
+                    <label>
+                        <input id="obs.PATIENTDEFAULTED" name="obs.REASONFOREXITINGCARE" type="checkbox"
+                               data-concept="1811^REASON FOR EXITING CARE^99DCT" value="1743^PATIENT DEFAULTED^99DCT">
+                        CLIENT DEFAULTED
+                    </label>
+                    <label>
+                        <input id="obs.PATIENTDIED" name="obs.REASONFOREXITINGCARE" type="checkbox"
+                               data-concept="1811^REASON FOR EXITING CARE^99DCT" value="1742^PATIENT DIED^99DCT">
+                        CLIENT DIED
+                    </label>
+                </fieldset>
             </div>
-           -->
 
             <div class="form-group">
                 <label>Investigations:</label>
@@ -121,17 +142,13 @@
             </div>
             <div class="form-group differential_count">
                 <label for="diagnosis">DIAGNOSIS</label>
-                <select class="form-control" id="diagnosis" name="diagnosis" required="required" data-concept="f1bec2f8-ce26-4fb8-a4fb-68bf7a34381d^Diagnosis^99DCT">
+                <select class="form-control" id="diagnosis" name="diagnosis" data-concept="f1bec2f8-ce26-4fb8-a4fb-68bf7a34381d^Diagnosis^99DCT">
                     <option value="">...</option>
                     <option value="cf64f9d4-d38a-11e8-b6e2-0c5b8f279a64^DAYS^99DCT">Coronavirus infection, unspecified - B342</option>
                     <option value="cf6520bd-d38a-11e8-b6e2-0c5b8f279a64^DAYS^99DCT">Coronavirus as the cause of diseases classified elsewhere - B972</option>
                     <option value="cf6520f1-d38a-11e8-b6e2-0c5b8f279a64^DAYS^99DCT">Oth coronavirus as the cause of diseases classd elswhr - B9729</option>
                     <option value="cf6a6236-d38a-11e8-b6e2-0c5b8f279a64^DAYS^99DCT">Pneumonia due to SARS-associated coronavirus - J1281</option>
                     <option value="cf6520d7-d38a-11e8-b6e2-0c5b8f279a64^DAYS^99DCT">SARS-associated coronavirus causing diseases classd elswhr - B9721</option>
-                    <!--<option value="1073^WEEKS^99DCT">Weeks</odivption>
-                    <option value="1074^MONTHS^99DCT">Months</option>-->
-                    <!-- ... More options in between here -->
-                    <option value="1079^CONTINUOUS^99DCT">Continuous</option>
                 </select>
             </div>
             <div class="form-group">
@@ -154,19 +171,9 @@
 
             <div class="form-group">
                 <label for="returnDate">Next visit Date:</label>
-                <!--<input class="form-control" id="obs.ReturnDate" name="obs.ReturnDate" data-concept="3800^Return Date:^99DCT" type="datetime-local">-->
                 <input class="form-control date_picker futureDate next-date" id="returnDate" name="returnDate" type="date">
             </div>
-            <!--
-            <div class="form-group">
-                    <label>Next visit Date:</label>
-                    <textarea class="form-control" id="obs.Rendezvous" name="obs.Rendezvous" type="date"  rows="2" data-concept="5096^Rendezvous^99DCT"></textarea>
-            </div>-->
         </fieldset>
-    </div>
-    <div>
-        <input id="save_draft" name="save_draft" type="submit" value="Draft"/>
-        <input id="submit_form" name="submit_form" type="submit" value="submit"/>
     </div>
 </form>
 
