changes added on muZima Form

--- a/COVID19 QUARANTINE AND ISOLATION REGISTRATION FORM.html
+++ b/COVID19 QUARANTINE AND ISOLATION REGISTRATION FORM.html
@@ -190,8 +190,8 @@
                     </select>
                     <div class="form-group freetext">
                         <label for="freetext_general_ose">OTHER SITE OF EXPOSURE</label>
-                        <textarea class="form-control" id="freetext_general_ose" name="freetext_general"
-                                  type="text" data-concept="c33b96ee-26ba-4d36-80cc-edbbdb542e96^OTHER SITE OF EXPOSURE^99DCT"></textarea>
+                        <input class="form-control" id="freetext_general_ose" name="freetext_general"
+                                  type="text" data-concept="c33b96ee-26ba-4d36-80cc-edbbdb542e96^OTHER SITE OF EXPOSURE^99DCT"></input>
                     </div>
                 </div>
             <label for="differential_count">LOCATION OF EXPOSURE:</label>
