--- a/Lab exam request.html
+++ b/Lab exam request.html
@@ -17,7 +17,7 @@
 <form id="VitalSigns_form" name="VitalSigns_form">
     <div class="section">
         <fieldset>
-            <h2>LABORATORY ORDERS</h2>
+            <h2>LABORATORY TESTS ORDERS</h2>
             <h3>Encounter Details</h3>
             <div class="form-group">
                 <label for="encounter.location_id">Location Name:<span class="required">*</span></label>
@@ -93,28 +93,26 @@
             </div>
         </fieldset>
     </div>
-
-
     <div class="sub-section">
         <h3>LABORATORY REQUEST FORM</h3>
-        <h2>Covid19 Test</h2>
+        <h2>COVID19 TESTS</h2>
         <fieldset>
             <div class="form-group">
-                <label>DATE OF LABORATORY TEST:(dd-mm-yyyy)</label>
+                <label>DATE OF LABORATORY TEST REQUEST:(dd-mm-yyyy)</label>
                 <input class="form-control" id="obs.DATEOFLABORATORYTEST" name="obs.DATEOFLABORATORYTEST" type="text"  data-concept="3267^DATE OF LABORATORY TEST^99DCT"></input>
             </div>
             <div class="form-group">
-                <label for="obs.Covidcontroltest">Covid19 test(Number 1-X:</label>
+                <label for="obs.Covidcontroltest">Covid19 Test Number(1-X):</label>
                 <input id="obs.Covidcontroltest" class="form-control" name="obs.Covidcontroltest" type="number" data-concept="107305^Covid control test^99DCT"/>
             </div>
 
             <div class="form-group">
-                <label for="obs.TESTINGCODE">Sample code(LabCode):</label>
+                <label for="obs.TESTINGCODE">Lab Sample Code(Lab Code):</label>
                 <input id="obs.TESTINGCODE" class="form-control" name="obs.TESTINGCODE" type="number" data-concept="13224^TESTING CODE^99DCT"/>
             </div>
 
             <div class="form-group">
-            <h3> Lab exams list </h3>
+            <h3>Laboratory Tests List </h3>
                 <label>
                     <input id="obs.Covid19IgM" name="obs.Covid19IgM" type="checkbox" data-concept="107310^Frequante Covid19 test^99DCT" value="107306^Covid19 Ig M^99DCT">
                     Covid19 Ig M
@@ -171,7 +169,7 @@
         </fieldset>
     </div>
         <div class="form-group">
-            <label>Other Tests: </label>
+            <label>OTHER TESTS: </label>
             <textarea class="form-control" id="obs.Laboratorytestsothercomments" name="obs.Laboratorytestsothercomments" type="text"  rows="2" data-concept="912a62c3-8b55-4d28-9985-46291138593c^Laboratory tests other comments^99DCT"></textarea>
         </div>
 
@@ -310,7 +308,5 @@ function calculateBMI(){
 		$('#obs\\.imc').val(IMC.toFixed(2));
 	}
 }
-
-
 </script>
 </html>
