--- a/Lab exams results.html
+++ b/Lab exams results.html
@@ -17,7 +17,7 @@
 <form id="VitalSigns_form" name="VitalSigns_form">
     <div class="section">
         <fieldset>
-            <h2>LABORATORY ORDERS</h2>
+            <h2>LABORATORY TESTS RESULTS FORM</h2>
             <h3>Encounter Details</h3>
             <div class="form-group">
                 <label for="encounter.location_id">Location Name:<span class="required">*</span></label>
@@ -97,15 +97,15 @@
 
     <div class="sub-section">
         <h3>COMPLEMENTARY EXAMS AND RESULTS</h3>
-        <h2>Covid19 Test</h2>
+        <h2>COVID19 TESTS</h2>
         <fieldset>
             <div class="form-group">
-                <label for="obs.Covidcontroltest">Covid19 test(Number 1-X:</label>
+                <label for="obs.Covidcontroltest">Covid19 Test Number(1-X):</label>
                 <input id="obs.Covidcontroltest" class="form-control" name="obs.Covidcontroltest" type="number" data-concept="107305^Covid control test^99DCT"/>
             </div>
 
             <div class="form-group">
-                <label for="obs.Covid19testResults">Covid19 test Results:</label>
+                <label for="obs.Covid19testResults">Covid19 Test Result:</label>
                 <select class="form-control" id="obs.Covid19testResults" name="obs.Covid19testResults" data-concept="107308^Covid Ig M^99DCT" placeholder="">
                     <option value="">...</option>
                     <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -115,7 +115,7 @@
 
 
             <div class="form-group">
-                <label for="obs.CovidIgM">Covid Ig M:</label>
+                <label for="obs.CovidIgM">Covid19 IgM:</label>
                 <select class="form-control" id="obs.CovidIgM" name="obs.CovidIgM" data-concept="107306^Covid Ig M^99DCT" placeholder="">
                     <option value="">...</option>
                     <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -123,7 +123,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="obs.Covid19IgG">Covid19 Ig G:</label>
+                <label for="obs.Covid19IgG">Covid19 IgG:</label>
                 <select class="form-control" id="obs.Covid19IgG" name="obs.Covid19IgG" data-concept="107307^Covid19 Ig G^99DCT" placeholder="">
                     <option value="">...</option>
                     <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -134,23 +134,23 @@
         <fieldset>
 
             <div class="form-group">
-                <label>DATE OF LABORATORY TEST:(dd-mm-yyyy)</label>
+                <label>DATE OF LABORATORY TEST REQUEST:(dd-mm-yyyy)</label>
                 <input class="form-control" id="obs.DATEOFLABORATORYTEST" name="obs.DATEOFLABORATORYTEST" type="text"  data-concept="3267^DATE OF LABORATORY TEST^99DCT"></input>
             </div>
 
             <div class="form-group">
-                <label>Date of receiving results:(dd-mm-yyyy)</label>
+                <label>DATE OF RECEIVING LAB TEST RESULTS:(dd-mm-yyyy)</label>
                 <input class="form-control" id="obs.Dateofreceivingresults" name="obs.Dateofreceivingresults" type="text"  data-concept="107327^Date of receiving results^99DCT"></input>
             </div>
             <div class="form-group">
-                <label>Date supposed for to take sample:(dd-mm-yyyy)</label>
+                <label>DATE SUPPOSED FOR TAKING NEXT SAMPLE(dd-mm-yyyy)</label>
                 <input class="form-control" id="obs.Datesupposedfortotakesample" name="obs.Datesupposedfortotakesample" type="text"  data-concept="107311^Date supposed for to take sample^99DCT"></input>
             </div>
         </fieldset>
 
 
         <div class="form-group">
-            <label for="obs.TESTSORDERED">TESTS ORDERED:</label>
+            <label for="obs.TESTSORDERED">OTHER ORDERED LAB TESTS RESULTS:</label>
             <select class="form-control" id="obs.TESTSORDERED" name="obs.TESTSORDERED" data-concept="3cd937e4-26fe-102b-80cb-0017a47871b2^TESTS ORDERED^99DCT">
                 <option value="">...</option>
                 <option value="10402^SGPT -ALAT ^99DCT">SGPT -ALAT </option>
@@ -167,12 +167,12 @@
             </select>
         </div>
         <div class="form-group">
-            <label>Other Tests: </label>
+            <label>OTHER TESTS-RESULTS: </label>
             <textarea class="form-control" id="obs.Laboratorytestsothercomments" name="obs.Laboratorytestsothercomments" type="text"  rows="2" data-concept="912a62c3-8b55-4d28-9985-46291138593c^Laboratory tests other comments^99DCT"></textarea>
         </div>
 
         <div class="form-group">
-            <label for="obs.Laboratoryresults">Results:</label>
+            <label for="obs.Laboratoryresults">LABORATORY RESULTS:</label>
             <select class="form-control" id="obs.Laboratoryresults" name="obs.Laboratoryresults" data-concept="39ed201e-c0e8-48dd-8944-551a14428a4b^Laboratory results^99DCT" placeholder="Start typing something...">
                 <option value="">...</option>
                 <option value="703^POSITIVE^99DCT">POSITIVE  </option>
@@ -181,7 +181,7 @@
                 <option value="1116^ABNORMAL^99DCT">ABNORMAL </option>
             </select>
             <div class="form-group">
-                <label>Record other result: </label>
+                <label>LABORATORY TESTS-OTHER RESULTS:</label>
                 <textarea class="form-control" id="obs.testsotherresult" name="obs.testsotherresult" type="text"  rows="2" data-concept="c963d117-f6eb-4e98-aa64-0d52a3476c20^Tests other result^99DCT"></textarea>
             </div>
         </div>
