Changes on Transfer.html

--- a/Transfer.html
+++ b/Transfer.html
@@ -166,10 +166,10 @@
         </fieldset>
     </div>
 
-    <div class="form-group">
+<!--    <div class="form-group">
         <label for="obs.Timeoftransferout">Transfer Date:</label>
         <input class="form-control date_picker Date today-date" id="obs.Timeoftransferout" name="obs.Timeoftransferout" data-concept="12098^Discharge Date:^99DCT" type="date">
-    </div>
+    </div>-->
     <div class="form-group">
         <label>REASON FOR TRANSFER: </label>
         <textarea class="form-control" id="obs.REASONFORTRANSFEROUT" name="obs.REASONFORTRANSFEROUT" type="text"  rows="2" data-concept="3004^REASONFORTRANSFEROUT^99DCT"></textarea>
