Add Rusinzi covid19 sites

--- a/Transfer.html
+++ b/Transfer.html
@@ -148,6 +148,15 @@
             <option value="107300^Kanyinya Treatment Center^99DCT">Kanyinya Treatment Center </option>
             <option value="107301^Muhanga (Kabgayi)^99DCT">Muhanga (Kabgayi) </option>
             <option value="107309^Kicukiro IPRC ^99DCT">Kicukiro IPRC </option>
+
+            <option value="107355^RUSIZI COVID19 GS GISHOMA^99DCT">RUSIZI COVID19 GS GISHOMA</option>
+            <option value="107356^RUSIZI COVID19 NYAKARENZO TC^100DCT">RUSIZI COVID19 NYAKARENZO TC</option>
+            <option value="107357^RUSIZI COVID19 MOUNT CYANGUGU TC^101DCT">RUSIZI COVID19 MOUNT CYANGUGU TC</option>
+            <option value="107358^RUSIZI COVID19 RUBAVU HOTEL TC^102DCT">RUSIZI COVID19 RUBAVU HOTEL TC</option>
+            <option value="107359^RUSIZI COVID19 GS GIHUNDWE QUARANTAINE^103DCT">RUSIZI COVID19 GS GIHUNDWE QUARANTAINE</option>
+            <option value="107360^RUSIZI COVID19 VIVE MOTEL TC^104DCT">RUSIZI COVID19 VIVE MOTEL TC</option>
+            <option value="107361^RUSIZI COVID19 TTC MURURU^105DCT">RUSIZI COVID19 TTC MURURU</option>
+
         </select>
     </div>
 
